--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.86.0",
+    "dynamodb-local": "^0.0.18",
+    "dynamoose": "^0.8.3",
+    "fs": "^0.0.1-security"
   }
 }
